tests/files/flow_controller_tests/should_run/053.cmdr
x = 10;
print log(x);