tests/files/flow_controller_tests/should_fail/028.cmdr
x = true;
print log(x);